# pylmesh

./: .gitignore  API.md  BUILD.md  CMakeLists.txt  DEPENDENCIES.md  FEATURES.md  GLTF_IMPLEMENTATION.md  LICENSE  MANIFEST.in  PYTHON_QUICKSTART.md  README.md  pyproject.toml  pytest.ini  requirements-build.txt  requirements-optional.txt  requirements.txt  setup.cfg  setup.py
.github/: ci.yml
.github/workflows/: ci.yml  wheels.yml
cmake/: DownloadDependencies.cmake  Draco.cmake  GLM.cmake  HDF5.cmake  OpenMP.cmake  SetupDraco.cmake  SetupPython.cmake  TinyGLTF.cmake  Zstd.cmake  nanobind.cmake  nlohmann_json.cmake
data/meshes/: neuron.glb  sphere.glb
docs/: API.md  DEPENDENCIES.md  DRACO.md  INSTALL.md  NOTEBOOKS.md  PROJECT_SUMMARY.md
examples/: CMakeLists.txt  load_mesh.cpp
include/pylmesh/: exporter.h  loader.h  mesh.h
include/pylmesh/exporters/: gltf_exporter.h  obj_exporter.h  off_exporter.h  ply_exporter.h  stl_exporter.h
include/pylmesh/loaders/: gltf_loader.h  obj_loader.h  off_loader.h  ply_loader.h  stl_loader.h
lmesh/: CMakeLists.txt
lmesh/include/lmesh/: base_mesh.h  bit_packed_array.h  compressed_mesh.h  exporter.h  flat_hash_map.h  loader.h  mapped_file.h  mesh.h  normal.h  quantized_mesh.h  radix_sort.h  tex_coord.h  ultra_compressed_mesh.h  ultra_quantized_mesh.h  vertex.h
lmesh/include/lmesh/exporters/: gltf_exporter.h  obj_exporter.h  off_exporter.h  ply_exporter.h  stl_exporter.h
lmesh/include/lmesh/loaders/: gltf_loader.h  obj_loader.h  off_loader.h  ply_loader.h  stl_loader.h
lmesh/src/: CMakeLists.txt  compressed_mesh.cpp  exporter.cpp  loader.cpp  mesh.cpp  quantized_mesh.cpp  ultra_compressed_mesh.cpp  ultra_quantized_mesh.cpp
lmesh/src/exporters/: gltf_exporter.cpp  obj_exporter.cpp  off_exporter.cpp  ply_exporter.cpp  stl_exporter.cpp
lmesh/src/loaders/: gltf_loader.cpp  obj_loader.cpp  off_loader.cpp  ply_loader.cpp  stl_loader.cpp
notebooks/: README.md  glb_to_obj.ipynb  mesh_conversion.ipynb  obj_to_glb.ipynb  surface_area.ipynb
pytests/: __init__.py  test_conversion.py  test_formats.py  test_mesh.py
python/: CMakeLists.txt  bindings.cpp  example.py  test_formats.py  test_surface_area.py
python/pylmesh/: __init__.py  batch_conversion_glb.py  trimesh_utils.py
scripts/: batch_convert_obj_to_glb.py  compute_surface_area.py  mesh_surface_area.py  quantized_mesh_surface_area.py  surface_area_ultra_quantized_mesh.py  ultra_compressed_mesh_surface_area.py
scripts/loading/: load_pylmesh_mesh.py  load_pylmesh_quantized_mesh.py  load_pylmesh_ultra_quantized_mesh.py  load_pyvista.py  load_trimesh.py
src/: CMakeLists.txt  exporter.cpp  loader.cpp  mesh.cpp
src/exporters/: gltf_exporter.cpp  obj_exporter.cpp  off_exporter.cpp  ply_exporter.cpp  stl_exporter.cpp
src/loaders/: gltf_loader.cpp  obj_loader.cpp  off_loader.cpp  ply_loader.cpp  stl_loader.cpp
test_data/: test.glb  test.gltf  test_draco.glb
test_data/tests/: CMakeLists.txt  test_mesh.cpp
tests/: test_conversion.py  test_formats.py  test_mesh.py  test_quantized_mesh.py  test_surface_area.py  test_ultra_compressed_mesh.py  test_ultra_quantized_mesh.py
tests/test_data/: test.stl
