##########################################################################################
# -*- coding: utf-8 -*-
##########################################################################################
# Copyright (c) 2025 - 2026, Open Brain Institute
#
# Author(s):
#   Marwan Abdellah <marwan.abdellah@openbraininstitute.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under
# the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
##########################################################################################

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pylmesh"
version = "0.0.1"
description = "A lightweight library for loading 3D mesh files in multiple formats"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Marwan Abdellah", email = "marwan.abdellah@openbraininstitute.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
]
keywords = ["mesh", "3d", "obj", "stl", "ply", "off", "gltf", "glb", "loader", "draco"]
dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
trimesh = ["trimesh>=3.9.0"]
dev = [
    "pytest>=6.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.3.0",
    "plotly>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/openbraininstitue/pylmesh"
Repository = "https://github.com/openbraininstitue/pylmesh"

[tool.scikit-build]
cmake.source-dir = "."
wheel.install-dir = "pylmesh"
install.components = ["python"]
cmake.args = ["-DENABLE_GLTF=ON"]
