##########################################################################################
# -*- coding: utf-8 -*-
##########################################################################################
# Copyright (c) 2025 - 2026, Open Brain Institute
#
# Author(s):
#   Marwan Abdellah <marwan.abdellah@openbraininstitute.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under
# the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
##########################################################################################

[build-system]
requires = ["scikit-build-core", 
            "nanobind >=1.3.2",
            "typing_extensions",
            "setuptools",
            "wheel"]

build-backend = "scikit_build_core.build"

[project]
name = "pylmesh"
dynamic = ["version"]
description = "A lightweight library for importing and exporting surface mesh files in multiple formats"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Marwan Abdellah", email = "marwan.abdellah@openbraininstitute.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
]
keywords = ["mesh", "3d", "obj", "stl", "ply", "off", "gltf", "glb", "loader", "draco"]
dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
trimesh = ["trimesh>=3.9.0"]
dev = [
    "pytest>=6.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.3.0",
    "plotly>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/openbraininstitue/pylmesh"
Repository = "https://github.com/openbraininstitue/pylmesh"

[tool.scikit-build]
cmake.source-dir = "."
wheel.install-dir = "pylmesh"
install.components = ["python"]
cmake.args = ["-DENABLE_GLTF=ON", "-DENABLE_DRACO=ON", "-DBUILD_PYTHON=ON", "-DBUILD_EXAMPLES=OFF"]
build.verbose = false
wheel.expand-macos-universal-tags = true
build-dir = "build/{wheel_tag}"

# Read version from pylmesh.version file
metadata.version.provider = "scikit_build_core.metadata.regex"
metadata.version.input = "pylmesh.version"
metadata.version.regex = "^(?P<value>.+)$"

[tool.cibuildwheel]
build-verbosity = 1
before-build = "pip install typing_extensions scikit-build-core nanobind"
skip = "cp39-* cp310-* cp311-* cp313-* cp314-* cp314t-* *musllinux*"
build = "cp312-*"

[tool.cibuildwheel.linux]
before-all = "dnf update -y && dnf install -y cmake git pkg-config hdf5-devel gcc gcc-c++ && cd /tmp && git clone --depth 1 https://github.com/g-truc/glm.git && cp -r glm/glm /usr/local/include/ && rm -rf glm && git clone --depth 1 https://github.com/nlohmann/json.git && cd json && cmake -DCMAKE_INSTALL_PREFIX=/usr/local . && cmake --install . && cd /tmp && rm -rf json && git clone --depth 1 --branch 1.5.7 https://github.com/google/draco.git && cd draco && mkdir build && cd build && cmake -DCMAKE_INSTALL_PREFIX=/usr/local -DBUILD_SHARED_LIBS=OFF -DCMAKE_POSITION_INDEPENDENT_CODE=ON -DDRACO_TESTS=OFF .. && cmake --build . --config Release -j$(nproc) && cmake --install . && cd /tmp && rm -rf draco && ldconfig"
environment = {CMAKE_PREFIX_PATH = "/usr/local:/usr", LD_LIBRARY_PATH = "/usr/local/lib:/usr/local/lib64"}
repair-wheel-command = "LD_LIBRARY_PATH=/usr/local/lib:/usr/local/lib64:$LD_LIBRARY_PATH auditwheel repair -w {dest_dir} {wheel}"