[metadata]
name = pylmesh
version = 1.0.0
description = A lightweight library for loading 3D mesh files in multiple formats
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: C++

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
where = python
